tenuo-core/check_output.txt
warning: unused import: `std::time::Duration`
   --> src/cel.rs:108:5
    |
108 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `tenuo-core` (lib) generated 1 warning (run `cargo fix --lib -p tenuo-core` to apply 1 suggestion)
    Checking tenuo-core v0.1.0 (/Users/aimable/Development/tenuo/tenuo-core)
warning: value assigned to `enrollment_token` is never read
  --> tests/enrollment_flow.rs:28:13
   |
28 |     let mut enrollment_token = String::new();
   |             ^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
 --> tests/cel_stdlib.rs:3:5
  |
3 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `tenuo-core` (test "enrollment_flow") generated 1 warning
warning: `tenuo-core` (test "cel_stdlib") generated 1 warning (run `cargo fix --test "cel_stdlib"` to apply 1 suggestion)
warning: unused import: `Any`
   --> src/wire.rs:258:39
    |
258 |         use crate::constraints::{All, Any, Pattern, Range, Constraint};
    |                                       ^^^

error[E0599]: no method named `ttl` found for enum `std::result::Result<T, E>` in the current scope
    --> src/planes.rs:1318:14
     |
1316 |           let worker_warrant = orchestrator
     |  ______________________________-
1317 | |             .attenuate(&root_warrant, &[("table", Pattern::new("public_*").unwrap().into())])
1318 | |             .ttl(Duration::from_secs(300)) // Added ttl
     | |             -^^^ method not found in `std::result::Result<warrant::Warrant, error::Error>`
     | |_____________|
     |

warning: unused variable: `warrant`
    --> src/planes.rs:1329:13
     |
1329 |         let warrant = control_plane
     |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_warrant`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `warrant`
    --> src/planes.rs:1651:13
     |
1651 |         let warrant = control_plane
     |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_warrant`

warning: unused variable: `bytes2`
   --> src/wire.rs:293:13
    |
293 |         let bytes2 = encode(&warrant2).unwrap();
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_bytes2`

For more information about this error, try `rustc --explain E0599`.
warning: `tenuo-core` (lib test) generated 5 warnings (1 duplicate)
error: could not compile `tenuo-core` (lib test) due to 1 previous error; 5 warnings emitted
